Add tasks for minify and build

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Title</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
     <!--=include blocks/header.html -->
 
-    <main>
+    <main class="main">
       page content
     </main>
 
