--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Title</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
     <header class="header">
@@ -12,20 +12,20 @@
         <a href="#">Form</a>
       </nav>
     </header>
+    
 
-
-    <main>
+    <main class="main">
       page content
     </main>
 
     <footer class="footer">
-        <div class="copyright">2016</div>
+        <div class="copyright">&copy; 2016</div>
         <div class="socials">
             <a href="#">twitter</a>
             <a href="#">vk</a>
             <a href="#">youtube</a>
         </div>
     </footer>
-
+    
 </body>
 </html>
