--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="copyright">2016</div>
+    <div class="copyright">&copy; 2016</div>
     <div class="socials">
         <a href="#">twitter</a>
         <a href="#">vk</a>
