Add styled for blocks

--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -1,8 +1,10 @@
 <footer class="footer">
-    <div class="copyright">&copy; 2016</div>
-    <div class="socials">
-        <a href="#">twitter</a>
-        <a href="#">vk</a>
-        <a href="#">youtube</a>
-    </div>
+    <ul class="footer__items">
+      <li class="footer__item copyright">Company &copy; 2016</li>
+      <li class="footer__item socials">
+          <a href="#">twitter</a>
+          <a href="#">vk</a>
+          <a href="#">youtube</a>
+      </li>
+    </ul>
 </footer>
