--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <header class="header">
+      <h1 class="title">Project scaffold</h1>
+    
       <nav class="nav">
         <a href="#">Home</a>
         <a href="#">Photo</a>
@@ -19,12 +21,14 @@
     </main>
 
     <footer class="footer">
-        <div class="copyright">&copy; 2016</div>
-        <div class="socials">
-            <a href="#">twitter</a>
-            <a href="#">vk</a>
-            <a href="#">youtube</a>
-        </div>
+        <ul class="footer__items">
+          <li class="footer__item copyright">Company &copy; 2016</li>
+          <li class="footer__item socials">
+              <a href="#">twitter</a>
+              <a href="#">vk</a>
+              <a href="#">youtube</a>
+          </li>
+        </ul>
     </footer>
     
 </body>
