--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -1,4 +1,6 @@
 <header class="header">
+  <h1 class="title">Project scaffold</h1>
+
   <nav class="nav">
     <a href="#">Home</a>
     <a href="#">Photo</a>
