--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -4,6 +4,6 @@
   <nav class="nav">
     <a href="#">Home</a>
     <a href="#">Photo</a>
-    <a href="#">Form</a>
+    <a href="#">Contacts</a>
   </nav>
 </header>
