--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,14 @@
 <body>
     <!--=include blocks/header.html -->
 
-    <main class="main">
-      page content
-    </main>
+    <div class="container">
+      <main class="main">
+        Page content
+      </main>
+      <aside class="aside">
+        Aside content
+      </aside>
+    </div>
 
     <!--=include blocks/footer.html -->
 </body>
