--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <h1 class="title">Project scaffold</h1>
     
       <nav class="nav">
-        <a href="#">Home</a>
-        <a href="#">Photo</a>
-        <a href="#">Contacts</a>
+        <a class="nav__item" href="#">Home</a>
+        <a class="nav__item" href="#">Photo</a>
+        <a class="nav__item" href="#">Contacts</a>
       </nav>
     </header>
     
@@ -29,9 +29,9 @@
         <ul class="footer__items">
           <li class="footer__item copyright">Company &copy; 2016</li>
           <li class="footer__item socials">
-              <a href="#">twitter</a>
-              <a href="#">vk</a>
-              <a href="#">youtube</a>
+              <a class="socials__item" href="#">twitter</a>
+              <a class="socials__item" href="#">vk</a>
+              <a class="socials__item" href="#">youtube</a>
           </li>
         </ul>
     </footer>
