--- a/src/blocks/footer.html
+++ b/src/blocks/footer.html
@@ -2,9 +2,9 @@
     <ul class="footer__items">
       <li class="footer__item copyright">Company &copy; 2016</li>
       <li class="footer__item socials">
-          <a href="#">twitter</a>
-          <a href="#">vk</a>
-          <a href="#">youtube</a>
+          <a class="socials__item" href="#">twitter</a>
+          <a class="socials__item" href="#">vk</a>
+          <a class="socials__item" href="#">youtube</a>
       </li>
     </ul>
 </footer>
