--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -2,8 +2,8 @@
   <h1 class="title">Project scaffold</h1>
 
   <nav class="nav">
-    <a href="#">Home</a>
-    <a href="#">Photo</a>
-    <a href="#">Contacts</a>
+    <a class="nav__item" href="#">Home</a>
+    <a class="nav__item" href="#">Photo</a>
+    <a class="nav__item" href="#">Contacts</a>
   </nav>
 </header>
