Add metatag & lang

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <!--=include blocks/header.html -->
+    <div class="wrapper">
+      <!--=include blocks/header.html -->
 
-    <div class="container">
-      <main class="main">
-        Page content
-      </main>
-      <aside class="aside">
-        Aside content
-      </aside>
+      <div class="container">
+        <main class="main">
+          Page content
+        </main>
+        <aside class="aside">
+          Aside content
+        </aside>
+      </div>
+
+      <!--=include blocks/footer.html -->
     </div>
 
-    <!--=include blocks/footer.html -->
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
