--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
 
       <div class="container">
         <main class="main">
-          Page content
+          <p>
+            Page content
+          </p>
+
+          <img
+            src="./assets/img/yoksel-zok-4SZ646m4FAA-unsplash.jpg"
+            style="max-width: 300px">
         </main>
         <aside class="aside">
           Aside content
